CS-185 margin align fix styles

--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -220,4 +220,7 @@
     width: 416px;
     padding: 8px;
     color:#fff;
+    li {
+      margin-bottom: 16px;
+    }
 }
